<resources>
    <string name="app_name">Apna Yojana</string>
    <string name="user_login">User Login</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="new_user_register_here">New user? Register here</string>
    <string name="enter_password1">Enter password</string>
    <string name="enter_email1">Enter e-mail</string>
    <string name="create_login">Create Login</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="app">Languages</string>
    <string-array name="lang">
        <item>English</item>
        <item>Hindi</item>
        <item>Nepali</item>

    </string-array>
    <string name="app1">MYSCHEMES</string>
    <string-array name="options">
        <item>One Family One Job Scheme</item>

    </string-array>
    <string name="title_activity_mapping">Map</string>
</resources>
